iml4e_oss_exp_platform/deployment/kfp/kfp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kfp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.il/add-base-url: "true"
spec:
  rules:
  - host: ml-pipeline-ui.local
    http:
      paths:
        - backend:
            service:
              name: ml-pipeline-ui
              port:
                number: 80
          path: /
          pathType: Prefix
